change css file in user components

--- a/src/app/features/user-panel/components/inquiry-form-to-fill/inquiry-form-to-fill.component.html
+++ b/src/app/features/user-panel/components/inquiry-form-to-fill/inquiry-form-to-fill.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container_fom_to_fill">
   <div class="title">Inquiry name: {{ inquiry.name }}</div>
   <form [formGroup]="formGroup" class="formGroup">
     <div formArrayName="answers">
