--- a/src/app/features/user-panel/components/multiselect-answer/multiselect-answer.component.html
+++ b/src/app/features/user-panel/components/multiselect-answer/multiselect-answer.component.html
@@ -1,20 +1,19 @@
 @if (isViewed) {
-  <div class="container">
-    <div class="question">
+    <div class="question_form_to_fill">
       <span>Question no.{{ itemIndex + 1 }}</span>
     </div>
-    <div class="questionContent">
-      <span class="questionSpan">{{ questionName }}</span>
+    <div class="question_content_form_to_fill">
+      <span>{{ questionName }}</span>
     </div>
     <form [formGroup]="form">
-      <div formArrayName="{{ multiSelectAnswerFormName.ANSWERS }}" class="answers">
+      <div formArrayName="{{ multiSelectAnswerFormName.ANSWERS }}">
         <div [formGroupName]="itemIndex">
-          <div formArrayName="{{ multiSelectAnswerFormName.ANSWERS }}" class="answers">
+          <div formArrayName="{{ multiSelectAnswerFormName.ANSWERS }}">
             @for (answer of answersFormArray.controls; track $index) {
               <div [formGroupName]="$index">
-                <div class="d-flex row answers">
-                  <mat-checkbox class="matCheckbox" formControlName="{{ multiSelectAnswerFormName.IS_SELECTED }}"></mat-checkbox>
-                  <mat-form-field appearance="outline" class="answerInputWidth">
+                <div class="d-flex row">
+                  <mat-checkbox formControlName="{{ multiSelectAnswerFormName.IS_SELECTED }}"></mat-checkbox>
+                  <mat-form-field appearance="outline" class="answer_input_width">
                     <input matInput type="text" formControlName="{{ multiSelectAnswerFormName.LABEL }}"/>
                   </mat-form-field>
                 </div>
@@ -24,5 +23,4 @@
         </div>
       </div>
     </form>
-  </div>
 }
