--- a/src/app/features/user-panel/components/scale-answer/scale-answer.component.css
+++ b/src/app/features/user-panel/components/scale-answer/scale-answer.component.css
@@ -1,73 +1,4 @@
-.question {
-  font-size: 18px;
-}
-.questionContent {
-  font-size: 16px;
-  font-weight: 400;
-  border-radius: 6px;
-  background-image: linear-gradient(180deg, #dce2f2, #f4f4fc 400%, #a2bddc);
-  box-shadow: 0px 0px 2px 2px #a3bfd9;
-  padding: 10px;
-  margin: 10px;
-  display: inline-block;
-  width: 80%;
-  justify-content: center;
-}
-
-.headInput {
-  text-align: center;
-  margin-top: 20px;
-}
-
-.headInputWidth {
-  width: 320px;
-}
-
-.questionInput {
-  width: 100%;
-}
-
-.questionMargin {
-  margin: 10px;
-}
-
-.questionInputWidth {
-  width: 500px;
-}
-
-.answerInputWidth {
-  width: 300px;
-}
-
-.footerBotton {
-  text-align: center;
-  gap: 10px;
-}
-
-.questionMargin {
-  margin: 10px;
-}
-
-.scaleInputs {
-  margin: 20px;
-}
-
-.steperInfo {
-  display: block;
-  justify-content: start;
-  grid-template-areas: 'main right';
-  gap: 10px;
-  background-color: #2196f3;
-  padding: 10px;
-}
-
-.steperSpanInfo {
-  background-color: rgba(255, 255, 255, 0.8);
-  text-align: end;
-  padding: 20px 0;
-  font-size: 30px;
-}
-.jk {
+.box_mat_slider {
   display: block;
   justify-content: center;
   text-align: center;
@@ -78,36 +9,38 @@
   box-shadow: 5px 5px 5px 0px #a6b9d8;
   padding: 8px;
   width: 35%;
+  
+  .grid-container {
+    display: grid;
+    grid-template-areas: 'main right';
+    width: 20%;
+    justify-content: start;
+    justify-items: start;
+    gap: 20px;
+    
+    .item1 {
+      width: 300px;
+      justify-content: start;
+      grid-area: 'main right';
+      border-top-left-radius: 8px;
+      border-top-right-radius: 8px;
+    }
+
+    .item2 {
+      width: 300px;
+      justify-content: start;
+      grid-area: 'main';
+    }
+    .item3 {
+      width: 300px;
+      justify-content: start;
+      grid-area: 'main';
+      border-bottom-left-radius: 8px;
+      border-bottom-right-radius: 8px;
+    }
+  }
 }
 
-.grid-container {
-  display: grid;
-  grid-template-areas: 'main right';
-  width: 20%;
-  justify-content: start;
-  justify-items: start;
-  gap: 20px;
-
-  .item1 {
-    width: 300px;
-    justify-content: start;
-    grid-area: 'main right';
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
-  }
-  .item2 {
-    width: 300px;
-    justify-content: start;
-    grid-area: 'main';
-  }
-  .item3 {
-    width: 300px;
-    justify-content: start;
-    grid-area: 'main';
-    border-bottom-left-radius: 8px;
-    border-bottom-right-radius: 8px;
-  }
-}
 .sliderMaxValue {
   color: red;
 }
