--- a/src/app/features/user-panel/components/shortquestion-answer/shortquestion-answer.component.html
+++ b/src/app/features/user-panel/components/shortquestion-answer/shortquestion-answer.component.html
@@ -1,20 +1,18 @@
 @if (isViewed) {
-  <div class="container">
-    <form [formGroup]="form">
-      <div class="questionInput" formArrayName="{{ inquiryAnswersFormName.ANSWERS }}">
-        <div class="row" align="center" [formGroupName]="itemIndex">
-          <div class="question">
-            <span>Question no.{{ itemIndex + 1 }}</span>
-          </div>
-          <div class="questionContent">
-            <span matInput type="text">{{questionLabel}}</span>
-          </div>
-          <mat-form-field appearance="outline" class="answerInputWidth">
-            <mat-label>Text of the Answer</mat-label>
-            <input matInput type="text" formControlName="{{ shortTextQuestionAnswerFormName.ANSWER }}" />
-          </mat-form-field>
+  <form [formGroup]="form">
+    <div formArrayName="{{ inquiryAnswersFormName.ANSWERS }}">
+      <div [formGroupName]="itemIndex">
+        <div class="question_form_to_fill">
+          <span>Question no.{{ itemIndex + 1 }}</span>
         </div>
+        <div class="question_content_form_to_fill">
+          <span matInput type="text">{{ questionLabel }}</span>
+        </div>
+        <mat-form-field appearance="outline" class="answer_input_width">
+          <mat-label>Text of the Answer</mat-label>
+          <input matInput type="text" formControlName="{{ shortTextQuestionAnswerFormName.ANSWER }}" />
+        </mat-form-field>
       </div>
-    </form>
-  </div>
+    </div>
+  </form>
 }
