--- a/src/app/features/pollster-panel/components/scale-select/scale-select.component.css
+++ b/src/app/features/pollster-panel/components/scale-select/scale-select.component.css
@@ -1,38 +1,3 @@
-.headInput {
-  text-align: center;
-  margin-top: 20px;
-}
-
-.headInputWidth {
-  width: 320px;
-}
-
-.questionInput {
-  text-align: center;
-  margin-top: 20px;
-}
-
-.questionMargin {
-  margin: 10px;
-}
-
-.questionInputWidth {
-  width: 500px;
-}
-
-.answerInputWidth {
-  width: 300px;
-}
-
-.footerBotton {
-  text-align: center;
-  gap: 10px;
-}
-
-.questionMargin {
-  margin: 10px;
-}
-
-.scaleInputs{
+.scale_inputs{
   margin:20px;
 }
