--- a/src/app/features/pollster-panel/components/scale-select/scale-select.component.html
+++ b/src/app/features/pollster-panel/components/scale-select/scale-select.component.html
@@ -1,23 +1,23 @@
 @if (this.isViewed) {
   <form [formGroup]="form">
-    <div class="questionInput" formArrayName="{{ inquiryFormName.QUESTIONS }}">
-      <div class="row" align="center" [formGroupName]="itemIndex">
-        <span class="questionMargin">Question no. {{ itemIndex + 1 }}</span>
-        <mat-form-field appearance="outline" class="questionInputWidth">
+    <div formArrayName="{{ inquiryFormName.QUESTIONS }}">
+      <div class="row" [formGroupName]="itemIndex">
+        <span class="question_margin">Question no. {{ itemIndex + 1 }}</span>
+        <mat-form-field appearance="outline" class="question_input_width">
           <mat-label>Text of the Question</mat-label>
           <input matInput type="text" formControlName="{{ scaleSelectQuestionFormName.QUESTION }}"/>
         </mat-form-field>
-        <button class="questionMargin" color="primary" mat-raised-button (click)="removeQuestion()">Remove question</button>
+        <button class="question_margin" color="primary" mat-raised-button (click)="removeQuestion()">Remove question</button>
         <div></div>
-        <mat-form-field class="scaleInputs" appearance="outline">
+        <mat-form-field class="scale_inputs" appearance="outline">
           <mat-label>Min value</mat-label>
           <input matInput type="number" formControlName="{{ scaleSelectQuestionFormName.MIN_VALUE }}" #minValue />
         </mat-form-field>
-        <mat-form-field class="scaleInputs" appearance="outline">
+        <mat-form-field class="scale_inputs" appearance="outline">
           <mat-label>Max value</mat-label>
           <input matInput type="number" formControlName="{{ scaleSelectQuestionFormName.MAX_VALUE }}" #maxValue />
         </mat-form-field>
-        <mat-form-field class="scaleInputs" appearance="outline">
+        <mat-form-field class="scale_inputs" appearance="outline">
           <mat-label>Step size</mat-label>
           <input matInput type="number" formControlName="{{ scaleSelectQuestionFormName.STEP_SIZE }}" #stepSize />
         </mat-form-field>
