--- a/src/app/features/pollster-panel/components/single-select/single-select.component.html
+++ b/src/app/features/pollster-panel/components/single-select/single-select.component.html
@@ -1,22 +1,22 @@
 @if (isViewed) {
   <form [formGroup]="form">
-    <div class="questionInput" formArrayName="{{ inquiryFormName.QUESTIONS }}">
-      <div class="row" align="center" [formGroupName]="itemIndex">
-        <span class="questionMargin">Question no. {{ itemIndex + 1 }}</span>
-        <mat-form-field appearance="outline" class="questionInputWidth">
+    <div formArrayName="{{ inquiryFormName.QUESTIONS }}">
+      <div [formGroupName]="itemIndex">
+        <span class="question_margin">Question no. {{ itemIndex + 1 }}</span>
+        <mat-form-field appearance="outline" class="question_input_width">
           <mat-label>Text of the Question</mat-label>
           <input matInput type="text" formControlName="{{ singleSelectQuestionFormName.QUESTION }}" />
         </mat-form-field>
-        <button class="questionMargin" color="primary" mat-raised-button (click)="removeQuestion()">Remove question</button>
+        <button class="question_margin" color="primary" mat-raised-button (click)="removeQuestion()">Remove question</button>
         <div class="row" formArrayName="{{ singleSelectQuestionFormName.ANSWERS }}">
           @for (answers of answersFormArray.controls; track answers; let index = $index) {
-            <div class="d-flex row" style="gap: 20px">
+            <div class="row">
               <mat-radio-button></mat-radio-button>
-              <mat-form-field appearance="outline" class="answerInputWidth">
+              <mat-form-field appearance="outline" class="answer_input_width" >
                 <mat-label>Answer</mat-label>
-                <input matInput type="text" formControlName="{{ index }}" />
+                <input matInput type="text"  formControlName="{{ index }}" />
               </mat-form-field>
-              <button class="questionMargin" color="primary" mat-raised-button (click)="removeAnswerAtForm(index)">Remove</button>
+              <button class="question_margin" color="primary" mat-raised-button (click)="removeAnswerAtForm(index)">Remove</button>
             </div>
           }
         </div>
