--- a/src/app/features/user-panel/components/inquiry-form-to-fill/inquiry-form-to-fill.component.css
+++ b/src/app/features/user-panel/components/inquiry-form-to-fill/inquiry-form-to-fill.component.css
@@ -15,13 +15,9 @@
   justify-content: center;
 }
 
-.formGroup {
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top:20px;
-}
 
-.matDialogActions{
+
+.mat_dialog_actions {
   background-image: url('/assets/images/layered-steps-haikei.png');
 }
 
@@ -65,4 +61,12 @@
     max-width: 120px;
     font-family: 600;
   }
+}
+
+.mat {
+  width: 100%;
+}
+
+.formGroup {
+  height: 38vh;
 }
