--- a/src/app/features/user-panel/components/inquiry-form-to-fill/inquiry-form-to-fill.component.html
+++ b/src/app/features/user-panel/components/inquiry-form-to-fill/inquiry-form-to-fill.component.html
@@ -2,16 +2,31 @@
   <div class="title">Inquiry name: {{ inquiry.name }}</div>
   <form [formGroup]="formGroup" class="formGroup">
     <div formArrayName="answers">
-      @for (answer of formArrayControls.controls; track $index) {
-        <inq-multiselect-answer [item]="answer" [itemIndex]="$index"></inq-multiselect-answer>
-        <inq-scale-answer [item]="answer" [itemIndex]="$index"></inq-scale-answer>
-        <inq-shortquestion-answer [item]="answer" [itemIndex]="$index"></inq-shortquestion-answer>
-        <inq-singleselect-answer [item]="answer" [itemIndex]="$index"></inq-singleselect-answer>
-      }
+      <!-- <mat-tab-group fitInkBarToContent [(selectedIndex)]="tabIndex">
+        @for (answer of formArrayControls.controls; track answer;let index = $index) {
+          <mat-tab mat-align-tabs="center" >
+            <inq-multiselect-answer [item]="answer" [itemIndex]="index"></inq-multiselect-answer>
+            <inq-scale-answer [item]="answer" [itemIndex]="index"></inq-scale-answer>
+            <inq-shortquestion-answer [item]="answer" [itemIndex]="index"></inq-shortquestion-answer>
+            <inq-singleselect-answer [item]="answer" [itemIndex]="index"></inq-singleselect-answer>
+          </mat-tab>
+        }
+      </mat-tab-group> -->
+      <inq-tab-group [selectedIndex]="tabIndex"  [@fadeIn]="state">
+        @for (answer of formArrayControls.controls; track answer;let index = $index) {
+          <inq-tab [title]="index">
+            <inq-multiselect-answer [item]="answer" [itemIndex]="index"></inq-multiselect-answer>
+            <inq-scale-answer [item]="answer" [itemIndex]="index"></inq-scale-answer>
+            <inq-shortquestion-answer [item]="answer" [itemIndex]="index"></inq-shortquestion-answer>
+            <inq-singleselect-answer [item]="answer" [itemIndex]="index"></inq-singleselect-answer>
+          </inq-tab>
+        }
+      </inq-tab-group>
     </div>
   </form>
-  <div class="matDialogActions">
+  <div class="mat_dialog_actions">
     <mat-dialog-actions align="end">
+      @if(!isNextButton){<button class="buttonCustom" mat-button (click)="changeTabIndex()" [@fadeIn]="stateButton" [disabled]="isNoButtonNext">Next</button>}
       <button class="buttonCustom" mat-button mat-dialog-close>Cancel</button>
       <button class="buttonCustom" mat-button mat-dialog-close (click)="saveAnswerForm()">Save</button>
     </mat-dialog-actions>
