--- a/src/app/features/user-panel/components/scale-answer/scale-answer.component.css
+++ b/src/app/features/user-panel/components/scale-answer/scale-answer.component.css
@@ -5,7 +5,7 @@
   margin-left: 30%;
   margin-right: 30%;
   border-radius: 8px;
-  background-image: linear-gradient(25deg, #dde8f9 10%, #a6b9d8, #dde8f9);
+  background-image: linear-gradient(25deg, #f3f8ff 10%, #ceddf5, #dde8f9);
   box-shadow: 5px 5px 5px 0px #a6b9d8;
   padding: 8px;
   width: 35%;
