--- a/src/app/features/user-panel/components/scale-answer/scale-answer.component.html
+++ b/src/app/features/user-panel/components/scale-answer/scale-answer.component.html
@@ -1,10 +1,5 @@
 @if (this.isViewed) {
-  <form [formGroup]="form">
-    <div formArrayName="{{ inquiryAnswersFormName.ANSWERS }}">
-      <div [formGroupName]="itemIndex">
-        <div class="question_form_to_fill">
-          <span>Question no.{{ itemIndex + 1 }}</span>
-        </div>
+  <form [formGroup]="formItem">
         <div class="question_content_form_to_fill">
           <span>{{ questionLabel }}</span>
         </div>
@@ -46,7 +41,5 @@
         <mat-slider [min]="minSteperValue" [max]="maxSteperValue" [step]="stepSizeValue">
           <input formControlName="{{ scaleSelectAnswerFormName.ANSWER }}" matSliderThumb #slider />
         </mat-slider>
-      </div>
-    </div>
   </form>
 }
