--- a/src/app/features/user-panel/components/shortquestion-answer/shortquestion-answer.component.html
+++ b/src/app/features/user-panel/components/shortquestion-answer/shortquestion-answer.component.html
@@ -1,10 +1,6 @@
 @if (isViewed) {
-  <form [formGroup]="form">
-    <div formArrayName="{{ inquiryAnswersFormName.ANSWERS }}">
-      <div [formGroupName]="itemIndex">
-        <div class="question_form_to_fill">
-          <span>Question no.{{ itemIndex + 1 }}</span>
-        </div>
+  <div class="form">
+    <form [formGroup]="formItem">
         <div class="question_content_form_to_fill">
           <span matInput type="text">{{ questionLabel }}</span>
         </div>
@@ -12,7 +8,6 @@
           <mat-label>Text of the Answer</mat-label>
           <input matInput type="text" formControlName="{{ shortTextQuestionAnswerFormName.ANSWER }}" />
         </mat-form-field>
-      </div>
-    </div>
-  </form>
+    </form>
+  </div>
 }
