--- a/src/app/features/user-panel/components/singleselect-answer/singleselect-answer.component.html
+++ b/src/app/features/user-panel/components/singleselect-answer/singleselect-answer.component.html
@@ -1,7 +1,5 @@
 @if (isViewed) {
-    <div class="question_form_to_fill">
-      <span>Question no.{{ itemIndex + 1 }}</span>
-    </div>
+  <div class="container">
     <div class="question_content_form_to_fill">
       <span>{{questionLabel}}</span>
     </div>
@@ -23,4 +21,5 @@
         </div>
       </mat-radio-group>
     </form>
+  </div>
 }
