--- a/src/app/features/user-panel/components/scale-answer/scale-answer.component.html
+++ b/src/app/features/user-panel/components/scale-answer/scale-answer.component.html
@@ -1,45 +1,47 @@
 @if (this.isViewed) {
   <form [formGroup]="formItem">
-        <div class="question_content_form_to_fill">
-          <span>{{ questionLabel }}</span>
-        </div>
-        <div class="box_mat_slider">
-          <div class="grid-container">
-            <div class="grid-container item1">
-              <span>Minimum value:</span>
-            </div>
-            <div class="item4">
-              <span>{{ minSteperValue }}</span>
-            </div>
+    <div class="question_content_form_to_fill">
+      <span>{{ questionLabel }}</span>
+    </div>
+    <div class="answer_form_iterator">
+      <div class="box_mat_slider">
+        <div class="grid-container">
+          <div class="grid-container item1">
+            <span>Minimum value:</span>
           </div>
-          <div class="grid-container">
-            <div class="grid-container item2">
-              <span> Max steper value:</span>
-            </div>
-            <div class="item4">
-              <span>{{ maxSteperValue }}</span>
-            </div>
-          </div>
-          <div class="grid-container">
-            <div class="grid-container item3">
-              <span> Step size value:</span>
-            </div>
-            <div class="item4">
-              <span>{{ stepSizeValue }}</span>
-            </div>
-          </div>
-          <mat-hint></mat-hint>
-          <div class="grid-container">
-            <div class="grid-container item3">
-              <span> Your answer </span>
-            </div>
-            <div class="item4">
-              <span [ngClass]="{ sliderMaxValue: isChosenMaxValue, textUnderline: isChosenMaxValue }"> {{ slider.value }} </span>
-            </div>
+          <div class="item4">
+            <span>{{ minSteperValue }}</span>
           </div>
         </div>
-        <mat-slider [min]="minSteperValue" [max]="maxSteperValue" [step]="stepSizeValue">
-          <input formControlName="{{ scaleSelectAnswerFormName.ANSWER }}" matSliderThumb #slider />
-        </mat-slider>
+        <div class="grid-container">
+          <div class="grid-container item2">
+            <span> Max steper value:</span>
+          </div>
+          <div class="item4">
+            <span>{{ maxSteperValue }}</span>
+          </div>
+        </div>
+        <div class="grid-container">
+          <div class="grid-container item3">
+            <span> Step size value:</span>
+          </div>
+          <div class="item4">
+            <span>{{ stepSizeValue }}</span>
+          </div>
+        </div>
+        <mat-hint></mat-hint>
+        <div class="grid-container">
+          <div class="grid-container item3">
+            <span> Your answer </span>
+          </div>
+          <div class="item4">
+            <span [ngClass]="{ sliderMaxValue: isChosenMaxValue, textUnderline: isChosenMaxValue }"> {{ slider.value }} </span>
+          </div>
+        </div>
+      </div>
+      <mat-slider [min]="minSteperValue" [max]="maxSteperValue" [step]="stepSizeValue">
+        <input formControlName="{{ scaleSelectAnswerFormName.ANSWER }}" matSliderThumb #slider />
+      </mat-slider>
+    </div>
   </form>
 }
