--- a/src/app/features/user-panel/components/scale-answer/scale-answer.component.css
+++ b/src/app/features/user-panel/components/scale-answer/scale-answer.component.css
@@ -41,9 +41,9 @@
   }
 }
 
-.sliderMaxValue {
-  color: red;
+.steper_answer {
+  font-size: 16px;
+  font-weight: 500;
 }
-.textUnderline {
-  text-decoration: underline;
-}
+
+
