--- a/src/app/features/user-panel/components/scale-answer/scale-answer.component.html
+++ b/src/app/features/user-panel/components/scale-answer/scale-answer.component.html
@@ -31,15 +31,12 @@
         </div>
       </div>
 
-      <div><span class="row" [@fadeIn]="stateSteper">Please touch steper to appoint yor answer</span></div>
+      <div class="steper_span"><span class="row" [@fadeIn]="stateSteper">Please touch steper to appoint yor answer</span></div>
       <span>{{ minSteperValue }}</span>
       <mat-slider [min]="minSteperValue" [max]="maxSteperValue" [step]="stepSizeValue" [disabled]="isDisbaled">
         <input formControlName="{{ scaleSelectAnswerFormName.ANSWER }}" matSliderThumb #slider (mouseover)="isDisabledM()" />
       </mat-slider>
       <span>{{ maxSteperValue }}</span>
-      <!-- <div class="item4">
-        <span [@fadeIn]="stateAnswer" class="steper_answer"> Your answer</span>
-      </div> -->
       <div class="steper_answer">
         <label [@fadeIn]="stateAnswer" for="input" class="label">Your answer:</label>
         <span [@fadeIn]="stateAnswer" type="text"> {{sliderValue}} </span>
