--- a/src/app/features/user-panel/components/scale-answer/scale-answer.component.html
+++ b/src/app/features/user-panel/components/scale-answer/scale-answer.component.html
@@ -34,12 +34,12 @@
       <div class="steper_span"><span class="row" [@fadeIn]="stateSteper">Please touch steper to appoint yor answer</span></div>
       <span>{{ minSteperValue }}</span>
       <mat-slider [min]="minSteperValue" [max]="maxSteperValue" [step]="stepSizeValue" [disabled]="isDisbaled">
-        <input formControlName="{{ scaleSelectAnswerFormName.ANSWER }}" matSliderThumb #slider (mouseover)="isDisabledM()" />
+        <input formControlName="{{ scaleSelectAnswerFormName.ANSWER }}" matSliderThumb #slider (mouseover)="invisibleSpan()" />
       </mat-slider>
       <span>{{ maxSteperValue }}</span>
-      <div class="steper_answer">
-        <label [@fadeIn]="stateAnswer" for="input" class="label">Your answer:</label>
-        <span [@fadeIn]="stateAnswer" type="text"> {{sliderValue}} </span>
+      <div [ngClass]="{'is_answer': isAnswer === true, 'no_answer' : isAnswer === false }">
+        <span>Your answer:</span>
+        <span>&nbsp;{{ sliderValue }}</span>
       </div>
       
     </div>
