Adding api service,models to rwposnes-requests

--- a/src/app/features/user-panel/containers/user-panel-container/user-panel-container.component.html
+++ b/src/app/features/user-panel/containers/user-panel-container/user-panel-container.component.html
@@ -9,7 +9,7 @@
               <div class="title">Your profile info</div>
               <div><span>Inquiries to accomplish:</span></div>
               <div>
-                <span>Failed: {{ 'o' }} within last 1 months</span>
+                <span>Failed: TODO</span>
               </div>
               <div>
                 <span>Your local time: {{ timeActual }} </span>
