--- a/src/app/features/inquiry-header/inquiry-header.component.html
+++ b/src/app/features/inquiry-header/inquiry-header.component.html
@@ -1,1 +1,51 @@
-<div class="container"><span>span</span></div>
+<!-- <div class="container">
+  <div class="row">
+    
+  </div>
+</div> -->
+
+<div class="container">
+  <div class="flex flex-row items-center justify-between">
+    <img
+      src="../assets/images/menu-svgrepo-com.svg"
+      width="25"
+      height="60"
+      class="justify-between"
+      alt=""
+      style="border-radius: 5px; cursor: pointer; padding-top: 3px"
+    />
+    <img
+      src="../assets/images/1.svg"
+      width="120"
+      height="60"
+      class="justify-between"
+      alt=""
+      style="border-radius: 5px; cursor: pointer; padding-top: 3px"
+    />
+
+    <img
+      src="../assets/images/1.svg"
+      width="120"
+      height="60"
+      class="justify-between"
+      alt=""
+      style="border-radius: 5px; cursor: pointer; padding-top: 3px"
+    />
+    <img
+      src="../assets/images/1.svg"
+      width="120"
+      height="60"
+      class="justify-between"
+      alt=""
+      style="border-radius: 5px; cursor: pointer; padding-top: 3px"
+    /><img
+      src="../assets/images/1.svg"
+      width="120"
+      height="60"
+      class="justify-between"
+      alt=""
+      style="border-radius: 5px; cursor: pointer; padding-top: 3px"
+    />
+    <button class="py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-red-400">Hello</button>
+  </div>
+</div>
