--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <div class="container">
-  <router-outlet></router-outlet>
+  <header><inq-inquiry-header></inq-inquiry-header></header>
+  <router-outlet style="z-index: -1;"></router-outlet>
 </div>
