--- a/src/app/features/shared-components/login/login.component.css
+++ b/src/app/features/shared-components/login/login.component.css
@@ -2,10 +2,10 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,300');
 
 .container {
-  background-image: url('/assets/images/stacked-peaks-haikei.png');
   background-size: 100%;
   height: 100%;
   width: 100%;
+  z-index: -1;
 }
 
 .center {
