--- a/src/app/features/inquiry-header/inquiry-header.component.html
+++ b/src/app/features/inquiry-header/inquiry-header.component.html
@@ -5,47 +5,50 @@
 </div> -->
 
 <div class="container">
-  <div class="flex flex-row items-center justify-between">
-    <img
-      src="../assets/images/menu-svgrepo-com.svg"
-      width="25"
-      height="60"
-      class="justify-between"
-      alt=""
-      style="border-radius: 5px; cursor: pointer; padding-top: 3px"
-    />
-    <img
-      src="../assets/images/1.svg"
-      width="120"
-      height="60"
-      class="justify-between"
-      alt=""
-      style="border-radius: 5px; cursor: pointer; padding-top: 3px"
-    />
-
-    <img
-      src="../assets/images/1.svg"
-      width="120"
-      height="60"
-      class="justify-between"
-      alt=""
-      style="border-radius: 5px; cursor: pointer; padding-top: 3px"
-    />
-    <img
-      src="../assets/images/1.svg"
-      width="120"
-      height="60"
-      class="justify-between"
-      alt=""
-      style="border-radius: 5px; cursor: pointer; padding-top: 3px"
-    /><img
-      src="../assets/images/1.svg"
-      width="120"
-      height="60"
-      class="justify-between"
-      alt=""
-      style="border-radius: 5px; cursor: pointer; padding-top: 3px"
-    />
-    <button class="py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-red-400">Hello</button>
+  <div class="flex flex-row col justify-between ml-5 mr-5">
+    <div class="flex flex-row col-start-3 gap-4">
+      <img
+        src="../assets/images/menu-svgrepo-com.svg"
+        width="25"
+        height="60"
+        class="justify-between"
+        alt=""
+        style="border-radius: 5px; cursor: pointer; padding-top: 3px"
+      />
+      <img
+        src="../assets/images/inquiry app text.svg"
+        width="120"
+        height="60"
+        class="justify-between"
+        alt=""
+        style="border-radius: 5px; cursor: pointer; padding-top: 3px"
+      />
+    </div>
+    <div class="flex flex-row col-end-3">
+      <img
+        src="../assets/images/search.svg"
+        width="60"
+        height="50"
+        class="mt-0.5"
+        alt=""
+        style="border-radius: 5px; cursor: pointer; padding-top: 3px"
+      />
+      <img
+        src="../assets/images/bell.svg"
+        width="60"
+        height="60"
+        class=""
+        alt=""
+        style="border-radius: 5px; cursor: pointer; padding-top: 3px"
+      />
+      <img
+        src="../assets/images/loginSVG.svg"
+        width="55"
+        height="55"
+        class=""
+        alt=""
+        style="border-radius: 5px; cursor: pointer; padding-top: 3px"
+      />
+    </div>
   </div>
 </div>
