--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,14 @@
-<div class="container">
+<!-- <div class="container">
   <header><inq-inquiry-header></inq-inquiry-header></header>
-  <router-outlet></router-outlet>
-</div>
+  
+  <section class="main-content">
+    <inq-sidebar></inq-sidebar>
+    <router-outlet></router-outlet>
+
+  </section>
+  
+</div> -->
+
+
+<header><inq-inquiry-header></inq-inquiry-header></header>
+<inq-sidebar></inq-sidebar>
