--- a/src/app/features/inquiry-header/inquiry-header.component.html
+++ b/src/app/features/inquiry-header/inquiry-header.component.html
@@ -4,7 +4,7 @@
   </div>
 </div> -->
 
-<div class="container">
+<div class="w-full h-15 header-shadow">
   <div class="flex flex-row col justify-between ml-5 mr-5">
     <div class="flex flex-row col-start-3 gap-4">
       <img
@@ -19,7 +19,7 @@
         src="../assets/images/inquiry app text.svg"
         width="120"
         height="60"
-        class="justify-between"
+        class=""
         alt=""
         style="border-radius: 5px; cursor: pointer; padding-top: 3px"
       />
@@ -34,7 +34,7 @@
         style="border-radius: 5px; cursor: pointer; padding-top: 3px"
       />
       <img
-        src="../assets/images/bell.svg"
+        src="../assets/images/bell1.svg"
         width="60"
         height="60"
         class=""
