--- a/src/app/features/inquiry-header/inquiry-header.component.css
+++ b/src/app/features/inquiry-header/inquiry-header.component.css
@@ -1,10 +1,4 @@
-.container{
-    background-color:#ffffff!important;
-    border: none !important;
-    border-width:0!important;
-    box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;
-    top:0;
-    width:100%;
-    z-index: 1;
-    height: 60px;
+.header-shadow{
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+    position: relative;
 }
