--- a/src/app/features/shared-components/login/login.component.html
+++ b/src/app/features/shared-components/login/login.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-  <div class="center d-flex">
+<div class="bg-amber-500">
+  <!-- <div class="center d-flex">
     <mat-card class="settingPageCard">
       <div class="hightDiv">
         <h2 class="title">Welcome in Inquiry App</h2>
@@ -17,5 +17,5 @@
         <button mat-button mat-raised-button color="primary" class="button" [disabled]="!choosedAccount"  (click)="logIn()">Log in</button>
       </mat-card-actions>
     </mat-card>
-  </div>
+  </div> -->
 </div>
