--- a/src/app/features/shared-components/login/login.component.css
+++ b/src/app/features/shared-components/login/login.component.css
@@ -2,10 +2,14 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,300');
 
 .container {
-  background-size: 100%;
-  height: 100%;
-  width: 100%;
+  /* background-size: 100%;
   z-index: -1;
+  */
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  background-color: darkgray;
 }
 
 .center {
