--- a/src/app/features/sidebar/sidebar.component.css
+++ b/src/app/features/sidebar/sidebar.component.css
@@ -4,6 +4,136 @@
 
 .hoover_item:hover {
     background-color: lightgray;
-    height: 24px;
+    height: 28px;
     cursor: pointer;
+}
+
+.d {
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.d li :first-of-type {    
+    animation: slidein 700ms normal;
+  }
+
+.d li:last-of-type {
+    animation: slidein 1s normal;
+  }
+
+.d li {
+    margin-left: 27px;
+    animation: slidein 1s normal;
+    display: block;
+    list-style: none;
+}
+
+.d li:nth-child(1) {
+    animation-delay: 100ms;
+    animation-duration: 1s;
+}
+
+.d li:nth-child(2) {
+    animation-delay: 200ms;
+    animation-duration: 1s;
+}
+
+.d li:nth-child(3) {
+    animation-delay: 300ms;
+    animation-duration: 1s;
+}
+
+.d li:nth-child(4) {
+    animation-delay: 400ms;
+    animation-duration: 1s;
+}
+
+@keyframes showup {
+    0% {
+        opacity: 0;
+    }
+    20% {
+        opacity: 0.6;
+    }
+    80% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes slidein {
+    0% {
+        margin-left: -800px;
+    }
+    20% {
+        margin-left: -800px;
+    }
+    
+    100% {
+        margin-left: 27px;
+    }
+}
+
+@keyframes to {
+    0% {
+        opacity: 0;
+        width: 0px;
+    }
+    20% {
+        opacity: 0.5;
+        width: 20px;
+    }
+    50% {
+        opacity: 1;
+        width: 30px;
+    }
+    100% {
+        opacity: 1;
+        width: 50px;
+    }
+}
+
+.di li {
+    position: absolute;
+    display: block;
+    list-style: none;
+    animation: animate 2s slidein;
+}
+
+.circles li:nth-child(3) {
+    left: 64%;
+    width: 25px;
+    height: 25px;
+    animation-delay: 1s;
+    animation-duration: 17s;
+    border-radius: 50% 20% / 10% 40%;
+}
+
+.circles li:nth-child(4) {
+    left: 66%;
+    width: 52px;
+    height: 52px;
+    animation-delay: 3s;
+    animation-duration: 20s;
+    border-radius: 50% 20% / 10% 40%;
+}
+
+.circles li:nth-child(5) {
+    left: 74%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 4s;
+    animation-duration: 12;
+    border-radius: 8px;
+}
+
+.circles li:nth-child(6) {
+    left: 79%;
+    width: 54px;
+    height: 54px;
+    animation-delay: 0s;
+    animation-duration: 34s;
+    border-radius: 8px;
 }
