--- a/src/app/features/sidebar/sidebar.component.html
+++ b/src/app/features/sidebar/sidebar.component.html
@@ -17,14 +17,14 @@
   <div class="pl-5">
     <div class="col-start-1 pt-3"><span class="font-medium">Components</span></div>
     <div class="pt-1">
-      <div class="col-start-1 flex flex-row gap-16 justify-between mr-4 rounded mt-1 hoover_item">
-        <div class="flex flex-row content-center gap-2 items-center">
+      <div class="col-start-1 flex flex-row gap-16 justify-between mr-4 rounded mt-1 h-7 hoover_item" (click)="showItems('user')">
+        <div class="flex flex-row items-center gap-2 h-6 pt-1">
           <img src="../assets/images/userSVG.svg" width="30" height="30" class="" alt="" />
-          <span class="font-normal text-xs w-full">User</span>
+          <span class="font-normal text-sm w-full">User</span>
         </div>
 
         <svg
-          class="h-6 w-4 text-black"
+          class="h-6 w-4 pt-1 text-black"
           viewBox="0 0 24 24"
           fill="none"
           stroke="currentColor"
@@ -34,6 +34,70 @@
         >
           <polyline points="6 9 12 15 18 9" />
         </svg>
+      </div>
+
+      @if (isUserDetail) {
+        <div>
+          <ul class="d text-sm">
+            <li><span>into amazing</span></li>
+            <li><span>into amazing</span></li>
+            <li><span>into amazing</span></li>
+            <li><span>into amazing</span></li>
+          </ul>
+        </div>
+      }
+
+      <div class="col-start-1 flex flex-row gap-16 justify-between mr-4 h-7 rounded mt-1 hoover_item">
+        <div class="flex flex-row items-center gap-2 h-6 pt-1">
+          <img src="../assets/images/questionnaire.svg" width="21" height="25" class="" alt="" />
+          <span class="font-normal text-sm w-full">Inquires</span>
+        </div>
+
+        <svg
+          class="h-6 w-4 pt-1 text-black"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        >
+          <polyline points="6 9 12 15 18 9" />
+        </svg>
+      </div>
+      <div class="col-start-1 flex flex-row gap-16 justify-between mr-4 rounded mt-1 h-7 hoover_item">
+        <div class="flex flex-row items-center gap-2 h-6 pt-1">
+          <img src="../assets/images/tables.svg" width="22" height="30" class="" alt="" />
+          <span class="font-normal text-sm w-full">Tables</span>
+        </div>
+          <svg
+            class="h-6 w-4 pt-1 text-black"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <polyline points="6 9 12 15 18 9" />
+          </svg>
+      </div>
+      <div class="col-start-1 flex flex-row gap-16 justify-between mr-4 rounded mt-1 h-7 hoover_item">
+        <div class="flex flex-row items-center gap-2 h-6 pt-1">
+          <img src="../assets/images/charts.svg" width="22" height="30" class="" alt="" />
+          <span class="font-normal text-sm w-full">Charts</span>
+        </div>
+          <svg
+            class="h-6 w-4 pt-1 text-black"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <polyline points="6 9 12 15 18 9" />
+          </svg>
       </div>
     </div>
   </div>
